# ai_engineer_project

./: .gitignore  Dockerfile  Makefile  README.md  ai_engineer_project.docx  ai_engineer_project.txt  docker-compose.yml  env.template  pyproject.toml
app/: main.py
app/ai/: __init__.py  tools.py
app/api/: dependencies.py  errors.py
app/api/routes/: __init__.py  ingest.py  ingest_routes.py  models.py  query.py  query_routes.py  weaviate_routes.py
app/core/: config.py  container.py  events.py  logging.py
app/graphs/: __init__.py  query_agent_graph.py
app/repositories/: __init__.py  weaviate_repository.py
app/schemas/: __init__.py  ingest_schema.py  query_schema.py
app/services/: __init__.py  query_service.py
app/utils/: __init__.py  pdf_parser.py
