[tool.poetry]
name = "fastapi-sentiment-service"
version = "0.1.0"
description = "FastAPI sentiment classifier with Hugging Face Transformers"
authors = ["AI Engineer <example@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = ">=0.115.0"
uvicorn = { version = ">=0.30.0", extras = ["standard"] }
pydantic-settings = ">=2.3.0"
scikit-learn = ">=1.5.0"
pandas = ">=2.2.2"
numpy = ">=1.26.0"
sqlmodel = ">=0.0.21"
alembic = ">=1.13.1"
python-dotenv = ">=1.0.1"
structlog = ">=24.2.0"
prometheus-fastapi-instrumentator = ">=7.0.0"
httpx = ">=0.27.0"
orjson = ">=3.10.0"
datasets = ">=2.20.0"
torch = ">=2.3.0"
huggingface-hub = ">=0.25.0"
transformers = ">=4.45.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2.0"
pytest-asyncio = ">=0.23.6"
ruff = ">=0.6.0"
mypy = ">=1.11.0"
coverage = ">=7.5.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
