[tool.poetry]
name = "fastapi-llm-query-service"
version = "0.1.0"
description = "FastAPI LLM query service with LangGraph, Weaviate RAG, and Tavily search"
authors = ["AI Engineer <example@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = ">=0.115.0"
uvicorn = { version = ">=0.30.0", extras = ["standard"] }
python-multipart = ">=0.0.6"
pydantic-settings = ">=2.3.0"
sqlmodel = ">=0.0.21"
python-dotenv = ">=1.0.1"
structlog = ">=24.2.0"
prometheus-fastapi-instrumentator = ">=7.0.0"
httpx = ">=0.27.0"
orjson = ">=3.10.0"
requests = ">=2.31.0"
langchain = ">=0.3.0"
langchain-core = ">=0.3.0"
langgraph = ">=0.2.0"
langchain-anthropic = ">=0.2.0"
tavily-python = ">=0.3.0"
weaviate-client = ">=4.0.0"
pypdf = ">=4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2.0"
pytest-asyncio = ">=0.23.6"
ruff = ">=0.6.0"
mypy = ">=1.11.0"
coverage = ">=7.5.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
